# CrisisLink

./: .gitignore  CrisisLink_OnePager_Pitch.md  CrisisLink_Technical_Architecture.md  crisislink_full_blueprint (1).html
backend/: README.md  pyproject.toml  requirements.txt
backend/dispatch/: __init__.py  app.py  auth.py  confirmation.py  geospatial.py  maps_client.py  ranking.py  schemas.py  service.py  unit_store.py
backend/integration/: __init__.py  operator_wiring.py  pipeline.py  responder_wiring.py  security.py  subsystem_error_notification.py
backend/intelligence/: __init__.py  app.py  auth.py  confidence_flagging.py  firebase_classifier_writer.py  firebase_guidance_writer.py  gemini_classifier.py  gemini_prompts.py  guidance_generator.py  schemas.py  service.py  timeout_monitor.py
backend/shared/: __init__.py
backend/speech_ingestion/: __init__.py  app.py  audit_logger.py  auth.py  chunker.py  failover_transcriber.py  firebase_writer.py  latency_monitor.py  schemas.py  service.py  transcriber.py
backend/tests/: __init__.py  conftest.py  test_chunker.py  test_confidence_flagging.py  test_dispatch.py  test_failover.py  test_firebase_paths.py  test_firebase_writer.py  test_gemini_classifier.py  test_guidance_generator.py  test_ingestion_pipeline.py  test_integration_wiring.py  test_intelligence.py  test_models.py  test_property_classification_schema.py  test_property_classification_timeout.py  test_property_confidence_threshold.py  test_property_emergency_protocol_selection.py  test_property_geospatial_filtering.py  test_property_guidance_register.py  (+9 more)
(+58 files in other folders)
